[package]
name = "tower-http-tracing"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/DoumanAsh/tower-http-tracing"
description = "Tracing middleware to span annotated every HTTP request"
keywords = ["tracing", "http", "tower", "middleware", "opentelemetry"]
categories = ["asynchronous", "network-programming", "web-programming"]
license = "BSL-1.0"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

# Common dependencies
[dependencies.http]
version = "1"

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.tower-service]
version = "0.3"
default-features = false

[dependencies.tower-layer]
version = "0.3"
default-features = false

[dependencies.uuid]
version = "1"
features = ["v4"]
default-features = false

# Opentelemetry dependencies
[dependencies.opentelemetry]
version = "0.31"
default-features = false
optional = true

[dependencies.opentelemetry_sdk]
version = "0.31"
default-features = false
optional = true

[dependencies.tracing-opentelemetry]
version = "0.32"
default-features = false
optional = true

# Datadog dependencies
[dependencies.tracing-datadog]
version = "0.4"
default-features = false
features = ["http"]
optional = true

# Dev dependencies
[dev-dependencies.tracing-test]
version = "0.2"
default-features = false

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt"]

[dev-dependencies.tower]
version = "0.5"
features = ["util"]

[features]
default = []
# Enables opentelemetry context
opentelemetry = ["dep:opentelemetry", "opentelemetry_sdk", "tracing-opentelemetry"]
# Enables datadog context
datadog = ["tracing-datadog"]

[package.metadata.docs.rs]
features = ["opentelemetry", "datadog"]
